Add file sending using XEP-0066
